--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -4,4 +4,81 @@ body {
 .app {
   margin-top: 20px;
   margin-bottom: 20px;
+  display: flex;
+  height: 100vh;
+
+  .channel-list {
+    width: 20%;
+    height: 90%;
+    background: aliceblue;
+  }
+
+  .message-list {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 90%;
+    margin-left: 20px;
+    margin-bottom: 20px;
+    padding: 10px 15px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    overflow: scroll;
+    h3 {
+      margin-top: 0;
+    }
+  }
+
+  .channel {
+    // margin-left: 10px;
+    padding: 10px;
+    text-align: left;
+    height: fit-content;
+    width: 100%;
+    cursor: pointer;
+    &:hover{
+      border: solid 1px black;
+    }
+  }
+
+  .message{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: fit-content;
+    margin-bottom: 10px;
+
+    &-user{
+      height: fit-content;
+      width: fit-content;
+    }
+    &-text{
+      height: fit-content;
+    }
+    &-timestamp{
+      margin-left: 5px;
+      height: fit-content;
+      width: fit-content;
+    }
+  }
+
+  .message-form{
+    display: flex;
+    margin-left: 20px;
+    width: 100%;
+    margin-bottom: 20px;
+  }
+
+  .text-input{
+    width: 90%;
+  }
+
+  .send-btn{
+    width: 10%;
+  }
+}
+
+.list-group-item {
+  background-color: transparent;
+  cursor: pointer;
 }
